<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.cartrack.userlocation.databinding.ClickListener" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/four_dp"
            android:theme="@style/MyToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:orientation="vertical">

            <fragment
                android:id="@+id/mapView"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginBottom="@dimen/ten_dp"
                android:layout_weight="1"
                android:padding="@dimen/five_dp"
                tools:context=".ui.UserLocationActivity" />

            <Button
                android:id="@+id/currentLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30sp"
                android:text="@string/current_location" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:layout_marginBottom="@dimen/ten_dp"
                    app:cardCornerRadius="@dimen/twelve_dp"
                    app:cardElevation="@dimen/five_dp"
                    app:cardMaxElevation="@dimen/ten_dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:padding="@dimen/cardview_outer_layout_padding">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="@dimen/five_dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:id="@+id/cvName1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/five_dp"
                                    android:text="@string/first_text"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toTopOf="@+id/cvName"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                                <TextView
                                    android:id="@+id/cvName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/five_dp"
                                    android:text="@string/first_text"
                                    android:textAllCaps="true"
                                    android:textColor="@android:color/holo_green_light"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toTopOf="@+id/cvUserName"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/cvName1" />

                                <TextView
                                    android:id="@+id/cvUserName"
                                    android:layout_width="0dp"
                                    android:layout_height="34dp"
                                    android:padding="@dimen/five_dp"
                                    android:text="@string/second_text"
                                    android:textSize="@dimen/eighteen_sp"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toTopOf="@id/cvEmail"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/cvName"
                                    app:layout_constraintVertical_bias="0.0" />

                                <TextView
                                    android:id="@+id/cvEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/five_dp"
                                    android:text="@string/third_text"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="@+id/cvUserName"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/cvUserName" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="@dimen/five_dp">

                            <TextView
                                android:id="@+id/cvWebsite"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/five_dp"
                                android:text="@string/first_text" />

                            <TextView
                                android:id="@+id/cvCity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/five_dp"
                                android:text="@string/second_text"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/cvCompany"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/five_dp"
                                android:text="@string/third_text" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>